# python-hugging-face-smolagents-playground

./: .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  config.py  docker-compose.yaml  main.py  prompts.py  pyproject.toml  requirements.txt
