[project]
name = "hugging-face-smolagents-playground"
version = "0.0.0"
description = "Understanding AI agents within a muti-agent workflow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "duckduckgo-search>=8.0.4",
    "faiss-cpu>=1.11.0",
    "fsspec==2025.3.0",
    "huggingface-hub~=0.33.1",
    "langchain-community>=0.3.26",
    "langchain>=0.3.26",
    "openai>=1.93.0",
    "sentence-transformers>=5.0.0",
    "smolagents>=1.19.0",
]
