[project]
name = "hugging-face-smolagents-playground"
version = "0.0.0"
description = "Understanding AI agents within a muti-agent workflow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "duckduckgo-search>=8.0.4",
    "faiss-cpu>=1.11.0",
    "fsspec==2025.3.0",
    "huggingface-hub>=0.31.2",
    "langchain-community>=0.3.26",
    "langchain>=0.3.26",
    "litellm>=1.74.0",
    "openai>=1.93.0",
    "pydantic-settings>=2.10.1",
    "sentence-transformers>=5.0.0",
    "smolagents[toolkit]>=1.21.3",
]

[project.optional-dependencies]
dev = [
    "black~=25.1.0",
]
